--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "\u001b[D\u001b[D\u001b[D\u001bNode\u001b[3~\u001b[\u001b[C\u001b[D.js)\u001b[",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "WOW": "node index.js"
+    "script": "node index.js"
   },
   "author": "",
   "license": "ISC",
